Changes in @NEW@:

Changes in 1.0:
  * Initial public release.
